--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "yup": "^1.0.2"
   },
